Now pass checkstyle and lint. Much faster UI.

--- a/robospice-sample-image-caching/res/values/strings.xml
+++ b/robospice-sample-image-caching/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">RoboSpice core sample</string>
+    <string name="app_name">RoboSpice image caching sample</string>
 </resources>
